@@ -1,8 +1,3 @@
-.inbox {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-}
-
 .inbox label{
   color: #FFFFFF;
 }
@@ -13,21 +8,15 @@
 }
 
 .prefs {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   font-weight: bold;
 }
 
 .titlew {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 13px;
   color: #FFFFFF;
   font-weight: bold;
 }
 
 .menuOpts {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 13px;
   color: #000000;
   border-spacing: 0px;
 }
@@ -43,7 +32,6 @@
 
 .button {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
 }
 
 label {
@@ -67,8 +55,6 @@ label {
 }
 
 .currentInbox {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 13px;
   color: white;
   font-weight: bold;
 }
@@ -102,17 +88,13 @@ label {
 }
 
 .currentQuota {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 13px;
   color: #FFFFFF;
-  font-weight: bold;    
+  font-weight: bold;
 }
 
 .maxQuota {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 13px;
   color: #FFFFFF;
-  font-weight: bold;    
+  font-weight: bold;
 }
 
 img {
@@ -123,6 +105,8 @@ body {
   min-width: 40em;
   color: #000000;
   background-color: #FFFFFF;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
 }
 
 form {
@@ -172,15 +156,12 @@ table {
   margin: 0;
   margin-left: 10px;
   padding: 5px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 #header ul {
   margin: 0;
   padding: 0;
   text-align: right;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: smaller;
 }
 
 #header li {
@@ -218,8 +199,6 @@ table {
   margin: 0;
   padding: 1px 0 1px 0;
   list-style-type: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: smaller;
 }
 
 .mainmenu ul li {
@@ -253,8 +232,6 @@ table {
   margin: 0;
   padding: 1px 0 1px 0;
   list-style-type: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: smaller;
 }
 
 .submenu ul li {
@@ -290,7 +267,6 @@ table {
   margin: 0;
   padding: 2px 0;
   list-style-type: none;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .pagenav ul li {
@@ -382,8 +358,6 @@ img.sort {
 }
 
 .errorTitle {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   font-weight: bold;
   color: #FFFFFF;
   text-align: center;
@@ -391,8 +365,6 @@ img.sort {
 }
 
 .errorText {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   background-color: #FFFFFF;
   text-align: center;
   padding: 2px;
@@ -403,7 +375,6 @@ img.sort {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
   background-color: #F5FCFF;
   background: url(./img/shtamp.png) top center no-repeat;
   border: 1px solid #000000;
@@ -412,7 +383,6 @@ img.sort {
 #loginBox h2 {
   margin: 0;
   padding: 0.5em;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 #loginBox table {
@@ -436,8 +406,6 @@ img.sort {
 }
 
 #inboxTable {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   border-collapse: collapse;
 }
 
@@ -475,8 +443,6 @@ img.sort {
 
 #inboxStatus {
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   border-top: 1px dashed #222222;
 }
 
@@ -501,15 +467,11 @@ img.sort {
 }
 
 .sendLabel {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   width: 15%;
   text-align: right;
 }
 
 .sendData {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   text-align: left;
 }
 
@@ -575,7 +537,6 @@ hr.mailAttachSep {
 .mail,
 .mailTextAttach {
   font-family: monospace;
-  font-size: 12px;
 }
 
 .mailNav {
@@ -593,31 +554,23 @@ hr.mailAttachSep {
 }
 
 .mailSwitchHeaders {
- font-family: Arial, Helvetica, sans-serif;
- font-size: 12px;
  text-align: left;
  background-color: #F7F7F7;
 }
 
 .mailHeaderLabel {
- font-family: Arial, Helvetica, sans-serif;
- font-size: 12px;
  font-weight: normal;
  text-align: right;
  background-color: #F7F7F7;
 }
 
 .mailHeaderData {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   font-weight: bold;
   background-color: #F7F7F7;
   text-align: left;
 }
 
 .contactsTitle {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   font-weight: bold;
   text-decoration: none;
   text-align: center;
@@ -625,8 +578,6 @@ hr.mailAttachSep {
 }
 
 .contactsSubTitle {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   font-weight: bold;
   text-decoration: none;
   text-align: center;
@@ -642,14 +593,10 @@ hr.mailAttachSep {
 }
 
 .contactsAddLabel {
- font-family: Arial, Helvetica, sans-serif;
- font-size: 12px;
  text-align: right;
 }
 
 .contactsAddData {
- font-family: Arial, Helvetica, sans-serif;
- font-size: 12px;
  text-align: left;
 }
 
@@ -664,28 +611,19 @@ hr.mailAttachSep {
   text-align: center;
   background-color: #0099CC;
   font-weight: bold;
-  font-size: 12px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .contactsListOdd {
-  font-size: 12px;
   color: #000000;
   background-color: #F7F7F7;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .contactsListEven {
-  font-size: 12px;
   color: #FFFFFF;
   background-color: #006699;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .contactsAddLink {
-  font-size: 12px;
-  color: #000000;
-  font-family: Arial, Helvetica, sans-serif;
   color: #003298;
   text-align: center;
   font-weight: bold;
@@ -720,15 +658,11 @@ hr.mailAttachSep {
 }
 
 .prefsLabel {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   text-align: right;
   width: 20%;
 }
 
 .prefsData {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   text-align: left;
 }
 
@@ -742,8 +676,6 @@ hr.mailAttachSep {
   background-color: #FFFF80;
   text-align: center;
   color: #000000;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
 }
 
 /* colored quotes */
